CLM-34346 Scan abstraction (#14044)